<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/questions_fragment"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.Questions">
    <TextView
        android:id="@+id/the_score"
        android:layout_gravity="end"
        android:layout_margin="42dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="25dp">

            <!--Question 1-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    style="@style/QuestionStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question1" />

                <TextView
                    android:id="@+id/explain_one"
                    style="@style/explanationView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <RadioGroup
                    android:id="@+id/question1_answers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/keller"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/keller" />

                    <RadioButton
                        android:id="@+id/angelou"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/angelou" />

                    <RadioButton
                        android:id="@+id/roosevelt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/roosevelt" />
                </RadioGroup>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"
                android:background="#CCCCCC"/>

            <!--Question 2-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    style="@style/QuestionStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question2" />

                <TextView
                    android:id="@+id/explain_two"
                    style="@style/explanationView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <!-- Answers-->
                <RadioGroup
                    android:id="@+id/question2_answers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/is_true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/isTrue" />

                    <RadioButton
                        android:id="@+id/is_false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/isFalse" />
                </RadioGroup>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"
                android:background="#CCCCCC"/>

            <!--Question 3-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/fill_in_blank" />

                <TextView
                    style="@style/QuestionStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question3" />
                <TextView
                    android:id="@+id/explain_three"
                    style="@style/explanationView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <!--Answers-->
                <EditText
                    android:id="@+id/curie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/blank"
                    android:background="#f0f0f0"
                    android:inputType="text" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"
                android:background="#CCCCCC"/>

            <!--Question 4-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    style="@style/QuestionStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question4" />

                <TextView
                    android:id="@+id/explain_four"
                    style="@style/explanationView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <RadioGroup
                    android:id="@+id/question4_answers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/tereshkova"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tereshkova" />

                    <RadioButton
                        android:id="@+id/ride"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ride" />

                    <RadioButton
                        android:id="@+id/jemison"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jemison" />
                </RadioGroup>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"
                android:background="#CCCCCC"/>

            <!--Question 5-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    style="@style/QuestionStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question5" />

                <TextView
                    android:id="@+id/explain_five"
                    style="@style/explanationView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <!--Answers-->
                <RadioGroup
                    android:id="@+id/question5_answers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/lovelace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lovelace" />

                    <RadioButton
                        android:id="@+id/hopper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hopper" />

                    <RadioButton
                        android:id="@+id/conway"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/conway" />
                </RadioGroup>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"
                android:background="#CCCCCC"/>

            <!--Question 6-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    style="@style/QuestionStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question6" />

                <TextView
                    android:id="@+id/explain_six"
                    style="@style/explanationView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical"
                    android:id="@+id/question6_answers" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">
                        <CheckBox
                            android:id="@+id/ginsburg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ginsburg" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">
                        <CheckBox
                            android:id="@+id/sotomayor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sotomayor"/>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">
                        <CheckBox
                            android:id="@+id/connor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/connor"/>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/get_results"
                style="@style/QuizButton"
                android:onClick="submitTheQuiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:text="Submit" />
        </LinearLayout>

    </ScrollView>
</FrameLayout>
